[tool.poetry]
name = "hodl-cli"
version = "2.0.1"
description = "Dollar-cost averaging for crypto on the command line."
authors = ["Mark Hudnall <me@markhudnall.com>"]
license = "MIT"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console', 'License :: OSI Approved :: MIT License',
  'Intended Audience :: End Users/Desktop',
  'Intended Audience :: Developers',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Financial and Insurance Industry',
  'Topic :: Office/Business :: Financial',
  'Topic :: Office/Business :: Financial :: Investment',
  'Topic :: Security :: Cryptography',
  'Operating System :: OS Independent'
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.13.0"
python-dateutil = "^2.8.1"
cbpro = "^1.1.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hodl-cli = 'hodl_cli.cli:run'
